@@ -1,4 +1,58 @@
-# cs2043project
+# Workout Tracker - Java Application
 
-To launch the .jar application
-java --module-path "javaFXdirectory/lib" --add-modules javafx.controls,javafx.fxml -jar app.jar
+This Java application helps users manage workouts effectively by providing recommendations and progress tracking. Below, you'll find how to use the app, its key features, and the project structure.
+
+## Introduction
+
+The Workout Tracker is a Java application designed to create, track, and optimize workout routines. It offers personalized workout recommendations, history tracking, scheduling, and equipment management.
+
+## Features
+
+### Input and Recommendations
+
+- **Workout Customization**: Add workouts with weight, reps, difficulty, and time goals.
+- **Personalized Recommendations**: Receive workout recommendations based on your ability and time constraints.
+- **User-Friendly**: Easily choose recommended reps and weights, update equipment, and rate difficulty.
+
+### Output and Tracking
+
+- **Workout History**: View past workouts, including weight, reps, difficulty, and equipment used.
+- **Recommendations**: Get personalized weight recommendations.
+- **Schedule**: Plan your gym schedule.
+- **Equipment**: Manage gym equipment easily.
+- **Data Storage**: The app saves workouts and other data in files.
+
+### Workflow
+
+- **Home Screen**: Choose between Workouts, Schedule, and Equipment.
+- **Workouts**: Start new sessions, update active ones, or view past workouts.
+- **Schedule**: Input daily availability.
+- **Equipment**: Add or remove gym items.
+- **Data Persistence**: Save/load data files in the app's directory.
+
+## Project Structure
+
+- **src**: Contains Java source code, including classes like Library, ReadWrite, and Workout.
+
+- **data**: Includes input and output files for workout data, recommendations, schedules, and equipment.
+
+- **docs**: Holds project documentation, including class diagrams and a glossary.
+
+- **test**: Contains unit tests to ensure code functionality.
+
+This structure supports the Workout Tracker's core features, with Library managing workouts, ReadWrite handling data, and Workout representing individual sessions.
+
+## Glossary
+
+- **Active Workout Page**: Displays the current active workout.
+- **Equipment Section**: Lists all gym equipment.
+- **Home Screen**: The app's main page.
+- **Past Workouts Page**: Lists past workouts.
+- **Schedule Section**: Displays the schedule.
+- **Workout Page**: Manage workouts.
+- **Workout**: A user-added workout session.
+- **Recommends**: Data suggesting weights and reps based on time and ability.
+
+
+
+
